--- a/go-web-app/static/home.html
+++ b/go-web-app/static/home.html
@@ -176,7 +176,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; 2024 Jyothiram. All rights reserved.</p>
+        <p>&copy; 2024 G.Jyothiram. All rights reserved.</p>
     </div>
 
 </body>
